feat: Add Speech to Text functionality
Also added display for detected speech to text output and a mock "send to AI" functionality which emits a json response

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Llama Astra Camera PWA - A Progressive Web App for camera access"
+      content="Llama Astra Camera PWA - A Progressive Web App for camera access and AI visual assistance"
     />
+    <meta name="permissions" content="camera microphone" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Llama Astra Camera PWA</title>
